# PGCarter

./: .coverage  .env.dev  .gitignore  LICENSE  Makefile  NOTICE  README.md  analysis.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  tests.yml
docs/: architecture.md  cli.md  configuration.md  contributing.md  development.md  index.md  installation.md  reference.md  usage.md
examples/analysis/: report.json  report.md  run-report.json  warnings.json
examples/analysis/tables/: audit_log.json  customer.json  org.json
examples/pgcarter_test/: report.json
examples/pgcarter_test/docs/: database.md  index.md  permissions.md  roles.md
examples/pgcarter_test/json/: database.json  functions.json  permissions.json  relationships.json  roles.json  schemas.json  sequences.json  tables.json  triggers.json  views.json
examples/pgcarter_test/sql/: apply.sql  database.sql  extensions.sql  roles.sql
examples/sqldump_test/: report.json
examples/sqldump_test/docs/: database.md  index.md  permissions.md  roles.md
examples/sqldump_test/json/: database.json  extensions.json  functions.json  indexes.json  permissions.json  relationships.dot  roles.json  sequences.json  tables.json  views.json
examples/sqldump_test/sql/: apply.sql  database.sql  extensions.sql  roles.sql
pgcarter/: __init__.py  cli.py  config.py  logging_config.py  main.py  report.py
pgcarter/analyzer/: __init__.py  config.py  engine.py  heuristics.py  loader.py  models.py  queries.py  rules.py  runner.py  writer.py
pgcarter/analyzer/checks/: __init__.py  columns.py  indexes.py  quality.py  relationships.py  statistics.py  tables.py
pgcarter/docs/: __init__.py  renderer.py
pgcarter/extractor/: __init__.py  base.py  connection.py  database.py  extensions.py  functions.py  indexes.py  permissions.py  relationships.py  roles.py  schemas.py  sequences.py  tables.py  triggers.py  views.py
pgcarter/sql/: __init__.py  base.py  generators.py
pgcarter/writers/: __init__.py  apply.py  graph.py  json_writer.py  sql_writer.py
sql_dump/: __init__.py  cli.py  config.py  logging_config.py  main.py  report.py
sql_dump/analyzer/: __init__.py  cli.py  engine.py  heuristics.py  loader.py  models.py  queries.py  rules.py  runner.py  writer.py
sql_dump/analyzer/checks/: __init__.py  (+6 more)
sql_dump/docs/: __init__.py  renderer.py
sql_dump/extractor/: __init__.py  base.py  connection.py  database.py  extensions.py  functions.py  indexes.py  permissions.py  relationships.py  roles.py  schemas.py  sequences.py  tables.py  triggers.py  views.py
sql_dump/models/: __init__.py
sql_dump/sql/: __init__.py  base.py  generators.py
sql_dump/writers/: __init__.py  apply.py  graph.py  json_writer.py  sql_writer.py
templates/: analysis.md.j2  column_analysis.md.j2  database.md.j2  function.md.j2  index.md.j2  indexes.md.j2  permissions.md.j2  roles.md.j2  schema.md.j2  table.md.j2  table_analysis.md.j2  trigger.md.j2  view.md.j2  warnings.md.j2
tests/: conftest.py  test_analyzer.py  test_cli_config.py  test_extractors.py  test_integration.py  test_logging.py  test_renderer.py  test_sql_generators.py  test_version.py  test_writers.py
tests/fixtures/: seed.sql
(+85 files in other folders)
