[project]
name = "sql-dump"
version = "0.1.0"
description = "PostgreSQL schema inventory, SQL extraction, and documentation generation tool"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "sql-dump contributors" }]
keywords = ["postgresql", "schema", "ddl", "documentation", "inventory"]
dependencies = [
    "psycopg[binary]>=3.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
sql-dump = "sql_dump.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sql_dump"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a live PostgreSQL database (deselect with '-m \"not integration\"')",
]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Tests embed long catalog-query match markers and DDL strings verbatim.
"tests/*" = ["E501"]
